# fishes-async-fastapi

./: .env.example  .env.production.example  .gitignore  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  logging_prod.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0f6b7271416f_initial_migration.py
entrypoints/: gunicorn.sh
gunicorn/: gunicorn_conf.py
scripts/: backup.sh  restore.sh
src/: config.py  constants.py  database.py  exceptions.py  main.py  schemas.py
src/fishes/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  services.py
src/regions/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  services.py
